cleaned up site and started implementing search functionality, still WIP

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <script src="wikipediaViewer.js" type="text/javascript"></script>
 </head>
 <body>
+  <!-- <iframe id="searchDisplay" src=""></iframe> -->
   <div class="container">
     <p><a href="https://en.wikipedia.org/wiki/special:random">Click here for a random article</a></p>
     </br>
     <div class="searchField">
-      <input type="text" name="search" placeholder="&#xf002;" style="font-family:Arial, FontAwesome" autocomplete="off">
+      <input id="searchBox" type="text" name="search" placeholder="&#xf002;" style="font-family:Arial, FontAwesome" autocomplete="off">
     </div>
     </br>
     <p>Click icon to search</p>
