--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <script src="wikipediaViewer.js" type="text/javascript"></script>
 </head>
 <body>
-  <!-- <iframe id="searchDisplay" src=""></iframe> -->
+  <iframe id="searchDisplay" src=""></iframe>
   <div class="container">
     <p><a href="https://en.wikipedia.org/wiki/special:random">Click here for a random article</a></p>
     </br>
